force-app/main/default/objects/Security_Incident__c/Security_Incident__c.object-meta.xml
<CustomObject>
    <description>Tracks security incidents for compliance frameworks including SOC2 CC7.x, HIPAA, and PCI-DSS</description>
    <label>Security Incident</label>
    <nameField>
        <displayFormat>INC-{0000000}</displayFormat>
        <label>Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Incidents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>