force-app/main/default/objects/Security_Incident__c/fields/Affected_Records__c.field-meta.xml
<CustomField>
    <fullName>Affected_Records__c</fullName>
    <description>Estimated number of records affected</description>
    <label>Affected Records</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>