force-app/main/default/objects/Security_Incident__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User assigned to handle the incident</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Security Incidents</relationshipLabel>
    <relationshipName>Security_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>