force-app/main/default/objects/Security_Incident__c/fields/Detected_Date__c.field-meta.xml
<CustomField>
    <fullName>Detected_Date__c</fullName>
    <description>When the incident was discovered</description>
    <label>Detected Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>