force-app/main/default/objects/Security_Incident__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <description>Compliance framework this incident relates to</description>
    <label>Framework</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SOC2</fullName>
                <default>true</default>
                <label>SOC2</label>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>PCI_DSS</fullName>
                <label>PCI-DSS</label>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>