force-app/main/default/objects/Security_Incident__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <description>Type of security incident</description>
    <label>Incident Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DATA_BREACH</fullName>
                <label>Data Breach</label>
            </value>
            <value>
                <fullName>UNAUTHORIZED_ACCESS</fullName>
                <label>Unauthorized Access</label>
            </value>
            <value>
                <fullName>MALWARE</fullName>
                <label>Malware</label>
            </value>
            <value>
                <fullName>PHISHING</fullName>
                <label>Phishing</label>
            </value>
            <value>
                <fullName>POLICY_VIOLATION</fullName>
                <label>Policy Violation</label>
            </value>
            <value>
                <fullName>CONFIGURATION_DRIFT</fullName>
                <label>Configuration Drift</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>