force-app/main/default/objects/Security_Incident__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>How the incident was resolved</description>
    <label>Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>