force-app/main/default/objects/Security_Incident__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>When the incident was resolved</description>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>