force-app/main/default/objects/Security_Incident__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the incident</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPEN</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>INVESTIGATING</fullName>
                <label>Investigating</label>
            </value>
            <value>
                <fullName>CONTAINED</fullName>
                <label>Contained</label>
            </value>
            <value>
                <fullName>RESOLVED</fullName>
                <label>Resolved</label>
            </value>
            <value>
                <fullName>CLOSED</fullName>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>